# golf_score_app

./: .env.example  .gitignore  00_START_HERE.md  ACTION_ITEMS_NOW.md  AD_DEBUG_GUIDE.md  AUDIO_ANALYSIS_DEBUG_GUIDE.md  AUDIO_ANALYSIS_DIAGNOSTIC_GUIDE.md  AUDIO_EXTRACTION_COMPARISON.md  AUDIO_EXTRACTION_COMPLETE.md  AUDIO_EXTRACTION_DETAIL_DETECTION.md  AUDIO_EXTRACTION_FINAL.md  AUDIO_EXTRACTION_QUICK_TEST.md  AUDIO_EXTRACTION_REPLACEMENT_ANALYSIS.md  AUDIO_EXTRACTION_REVISED.md  AUDIO_FORMAT_CHANGE_WAV_ANALYSIS.md  AUDIO_NO_AUDIO_TAG_COMPLETE_IMPLEMENTATION.md  AUDIO_NO_AUDIO_TAG_IMPLEMENTATION.md  AUDIO_SLICING_FIX.md  BACKEND_TRAJECTORY_HISTORY_API.md  BALL_TRACKING_ALGORITHM_COMPARISON.md  BLOCKING_ANALYSIS.md  BLOCKING_FIXES_CHECKLIST.md  BOTTOM_BAR_FIX_SUMMARY.md  BOTTOM_BAR_SOLUTION.md  BUILD_NEW_OAUTH.md  BUILD_VERIFICATION_GUIDE.md  CAMERAWESOME_OPTIMIZATION_SUMMARY.md  CHART_WRIST_SPEED_ANALYSIS.md  CHECKLIST.md  CLOUD_FIRST_PLAYBACK_IMPLEMENTATION.md  CLOUD_SYNC_IMPLEMENTATION.md  CODE_CHANGES_SUMMARY.md  CODE_REVIEW_FINAL_REPORT.md  COMPILATION_CHECKLIST.md  COMPLETION_SUMMARY.md  COORDINATE_SYSTEM_ANALYSIS.md  CRASH_FIX_SUMMARY.md  CSHARP_DEPLOYMENT_GUIDE.md  CSHARP_SECURITY_FIXES.md  C_SHARP_COMPLETE_IMPLEMENTATION_REPORT.md  (+191 more)
ATK_ORVIA_LandPage/: app-ads.txt  (+14 more)
android/app/: CMakeLists.txt  build.gradle.kts  client_secret_446697241300-dt24k77jh2cva8qi1pbhsqd3s3a26842.apps.googleusercontent.com.json  client_secret_446697241300-vqnlo2l37q8i404n1pa8hg29s1c0ffe9.apps.googleusercontent.com.json  proguard-rules.pro
android/app/src/debug/: AndroidManifest.xml
(+626 files in other folders)
